Date shared between views and api uses resolve

--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
 
 <!-- services -->
 <script type="text/javascript" src="services/yql.js"></script>
+<script type="text/javascript" src="services/stocks.js"></script>
+<script type="text/javascript" src="services/user.js"></script>
 
 <!-- controllers -->
 <script type="text/javascript" src="controllers/transaction_ctrl.js"></script>
 <script type="text/javascript" src="controllers/stocks_ctrl.js"></script>
 <script type="text/javascript" src="controllers/range_ctrl.js"></script>
+
 
 </html>
