--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
 </body>
 <script type="text/javascript" src="app.js"></script>
+
+<!-- directives -->
 <script src="directives/navbar.js"></script>
+<script src="directives/stock_listing.js"></script>
 
 <!-- services -->
 <script type="text/javascript" src="services/yql.js"></script>
