Adds trade page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <script type="text/javascript" src="controllers/transaction_ctrl.js"></script>
 <script type="text/javascript" src="controllers/stocks_ctrl.js"></script>
 <script type="text/javascript" src="controllers/range_ctrl.js"></script>
+<script type="text/javascript" src="controllers/trade_ctrl.js"></script>
 
 
 </html>
