--- a/directives/navbar.html
+++ b/directives/navbar.html
@@ -13,13 +13,17 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        
-      </ul>
-      
       <ul class="nav navbar-nav navbar-right">
-        <!-- <li><a href="#">Sign Up</a></li> -->
-        <li></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Navigate <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#" ui-sref="dashboard.portfolio">Portfolio</a></li>
+            <li><a href="#" ui-sref="dashboard.trade">Trade</a></li>
+            <li><a href="#" ui-sref="dashboard.transaction">Transaction</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#" ui-sref="dashboard">Home</a></li>
+          </ul>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
