Can delete transactions

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <!-- directives -->
 <script src="directives/navbar.js"></script>
 <script src="directives/stock_listing.js"></script>
+<script src="directives/transaction.js"></script>
 
 <!-- services -->
 <script type="text/javascript" src="services/yql.js"></script>
