Cost Basis calcuation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <script src="directives/navbar.js"></script>
 <script src="directives/stock_listing.js"></script>
 <script src="directives/transaction.js"></script>
+<script src="directives/position_listing.js"></script>
 
 <!-- services -->
 <script type="text/javascript" src="services/yql.js"></script>
@@ -59,6 +60,7 @@
 <script type="text/javascript" src="controllers/stocks_ctrl.js"></script>
 <script type="text/javascript" src="controllers/range_ctrl.js"></script>
 <script type="text/javascript" src="controllers/trade_ctrl.js"></script>
+<script type="text/javascript" src="controllers/portfolio_ctrl.js"></script>
 
 
 </html>
