--- a/directives/transaction_listing.html
+++ b/directives/transaction_listing.html
@@ -5,4 +5,4 @@
 <td>{{ transaction.price | currency }}</td>
 <td>{{ transaction.total | currency }}</td>
 <td>{{ userData.balance[transaction.date] | currency }}</td>
-<td><button class="btn btn-danger btn-xs" ng-click="delete(transaction)">X</button></td>
+<!-- <td><button class="btn btn-danger btn-xs" ng-click="delete(transaction)">X</button></td> -->
